<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/white">

    <!-- Username Input -->
    <EditText
        android:id="@+id/enterUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="10dp"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="20dp"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:padding="12dp"
        android:backgroundTint="@color/login_button_color"
        android:textColor="@color/login_text_color"/>

</LinearLayout>
